# wgpu_example

./: .gitignore  Cargo.toml  LICENSE  justfile
.cargo/: config.toml
main/: Cargo.toml  build.rs  index.html
main/src/: gpu.rs  lib.rs  main.rs  renderer.rs  scene.rs  shader.wgsl  texture.rs
main/src/shaders/: draw_image.wgsl
main/src/util/: tracing.rs
yuv_converter/: Cargo.toml
yuv_converter/src/: main.rs  texture.rs
