[package]
name = "main"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "main_core"

[dependencies]
winit = { workspace = true,  features = ["rwh_06"] }
wgpu = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tracing = { workspace = true }
rwh_06 = { workspace = true, features = ["std"]}
cursor-icon = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
futures = { workspace = true }
bytemuck =  { workspace = true, features = ["derive"] }
web-time = { workspace = true }
anyhow =  { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
tracing-web = {workspace = true }
wgpu = { workspace = true, features = ["webgl"]}
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
]}

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]
