[package]
name = "yuv_converter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
openh264 = { workspace = true }
wgpu = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"]}
tracing = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
flume = "0.11"